Fix header clipping and add link to single activity display

--- a/ui/src/components/landingPage/LandingPage.scss
+++ b/ui/src/components/landingPage/LandingPage.scss
@@ -35,7 +35,7 @@
     border: .1em solid $candy;
     color: $intensePink;
     font-weight: 600;
-    height: 3em;
+    height: 4em;
     width: 15em;
 }
 
